--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </div>
   </header>
   <section class="boxes">
+    <h2>Some rendom information</h2>
     <div class="container">
       <div class="box">
         <img src="./images/image1.webp" alt="">
