--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <div class="container">
       <div>
         <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes hear under the main title.It's a smaller font and the color is lover contrast</p>
+        <p>This website has some subtext that goes hear under the main title. It's a smaller font and the color is lower contrast. All this done in order to see difference and to practice your skills.</p>
+
+        <button type="button">Sign Up</button>
       </div>
       <img src="./images/imagehero.webp" alt="white lying chihuahua">
     </div>
@@ -37,17 +39,29 @@
     <h2>Some rendom information</h2>
     <div class="container">
       <div class="box">
-        <img src="./images/image1.webp" alt="">
+        <img src="./images/image1.jpg" alt="">
+        <div class="text">This is my favorit dog! We walk in the park every day. I like her so much!</div>
+        </div>
+
+        <div class="box">
+        <img src="./images/image2.jpg" alt="">
+        <div class="text">This is my favorit dog! We walk in the park every day. I like her so much!</div>
+        </div>
+
+        <div class="box">
+        <img src="./images/image3.jpg" alt="">
+        <div class="text">This is my favorit dog! We walk in the park every day. I like her so much!</div>
+        </div>
+
+        <div class="box">
+        <img src="./images/image4.jpg" alt="">
+        <div class="text">This is my favorit dog! We walk in the park every day. I like her so much!</div>
+        </div>
+
+        
+        </div>
       </div>
-      <div class="box">
-        <img src="./images/image2.webp" alt="">
-      </div>
-      <div class="box">
-        <img src="./images/image3.webp" alt="">
-      </div>
-      <div class="box">
-        <img src="./images/image4.webp" alt="">
-      </div>
+        
     </div>
   </section>
 </body>
