Add quote section to html, css

--- a/index.html
+++ b/index.html
@@ -64,5 +64,12 @@
         
     </div>
   </section>
+  <section class="quotes">
+   <div class="quote">
+     <p>"This is an inspirin quote, or a testimonial from a customer. Maybe it's just a filling up spase, or maybe people will really read it. Who knows? All I know is that is looks nice!"</p>
+
+     <b>Anonymous</b>
+   </div>
+  </section>
 </body>
 </html>
