Add last section, footer

--- a/index.html
+++ b/index.html
@@ -71,5 +71,19 @@
      <b>Anonymous</b>
    </div>
   </section>
+  <section class="subscribe">
+    <div class="contact-us">
+      <div class="text2">
+       <h3>Call to action! It's time!</h3>
+      <p>Sign up for our product by clicking that bottom right over here.</p>
+      </div>
+      
+      <button type="button">Sign Up</button>
+    </div>
+  </section>
+
+  <div class="footer">
+    <p>Copyright The Odin Project 2022</p>
+  </div>
 </body>
 </html>
